apps/temporal-codec-server/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-codec-server
  labels:
    app: temporal-codec-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal-codec-server
  template:
    metadata:
      labels:
        app: temporal-codec-server
      annotations:
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/agent-run-as-same-user: "true"
        vault.hashicorp.com/agent-cache-enable: "true"
        vault.hashicorp.com/agent-cache-use-auto-auth-token: "force"
        vault.hashicorp.com/agent-cache-listener-port: "8200"
        vault.hashicorp.com/role: temporal-codec-server
        vault.hashicorp.com/service: http://vault.vault.svc.cluster.local:8200
    spec:
      serviceAccountName: temporal-codec-server
      containers:
        - name: temporal-codec-server
          image: k3d-registry:5000/temporal-codec-server:local-20260820121642
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
